# ElCaracol

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  local_settings.h  main.cpp  motor.cpp  motor.h  robot.h  scr_main.cpp  single_encoder.cpp  single_encoder.h  statemachine.h
